<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000"
    tools:context=".Activities.MainMenu">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/menuButtons"
            android:text="@string/Save_label"
            android:background="#80D8FF"
            android:id="@+id/first_View"/>
        <TextView
            style="@style/menuButtons"
            android:text="@string/playlist_label"
            android:background="#40C4FF"
            android:id="@+id/second_View"
            />
        <TextView
            style="@style/menuButtons"
            android:text="@string/search_label"
            android:background="#00B0FF"
            android:id="@+id/third_View"
            />

    </LinearLayout>

</ScrollView>